# solang

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .rgignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Foo.contract  Foo.wasm  MAINTAINERS.md  MAINTENANCE.MD  Makefile  MicrosoftDemangleNodes.h  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TODO.md  build-llvm.sh  build.rs  clippy.toml  contract.sol  counter.abi  counter.wasm  incrementer.abi  incrementer.wasm  math.sol  package-lock.json  package.json  requirements.txt  rustfmt.toml
.github/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-llvm.yml  build_binaries.yml  ci-image.yml  docker-image.yml  llvm-cache.sh  release.yml  stylus.yml  substrate-ci-img.yml  test.yml
ci/: Dockerfile  Dockerfile.windows  x.py
docs/: aqd.rst  code_gen_options.rst  conf.py  contributing.rst  examples.rst  extension.rst  index.rst  installing.rst  language.rst  make.bat  optimizer.rst  requirements.txt  running.rst  status.rst  targets.rst  testing.rst
docs/examples/: abi_encode_call.sol  abstract_contract.sol  abstract_contract_inheritance.sol  array_bounds_check_optimization.sol  array_type_dynamic.sol  array_type_dynamic_push.sol  array_type_dynamic_storage.sol  array_type_fixed_length.sol  array_type_initialized.sol  array_type_references.sol  assert.sol  base_contract_function_call.sol  contract_inheritance.sol  contract_multiple_inheritance.sol  contract_recursive_inheritance.sol  contract_storage.sol  contract_storage_accessor.sol  contract_storage_accessor_override.sol  contract_storage_clear.sol  contract_storage_immutable.sol  contract_type.sol  dead_storage_elimination.sol  dynamic_bytes_type.sol  enum_type.sol  enum_type_external.sol  event_positional_fields.sol  events.sol  expression_this.sol  expression_this_external_call.sol  expression_unchecked.sol  function_arguments.sol  function_call.sol  function_call_external.sol  function_destructing_arguments.sol  function_modifier_arguments.sol  function_multiple_modifiers.sol  function_name_mangling.sol  function_overloading.sol  function_type.sol  (+45 more)
examples/: ENSRegistry.sol  ENSRegistryWithFallback.sol  ERC20.sol  ErrorCases.sol  LRC20_1.sol  LRC20_2.sol  USDC.sol  USDT.sol  WBTC.sol  WETH.sol  WLA.sol  adder.sol  all_features.sol  array.sol  ballot.sol  call_contract.sol  common_subexpression_elimination.sol  compare.sol  contract_new.sol  contract_type_cast_address.sol  create2.sol  create_contract.sol  dropnet.sol  example.sol  example.txt  flipper.sol  flipper.vy  full_example.sol  get_address.sol  incrementer.sol  inline_assembly_storage.sol  mulmod.sol  multicall.sol  multicall2.sol  proxy.sol  scoping.sol  sign.sol  simple_call_contract.sol  spl_token.sol  statement_destructing_conditional.sol  (+17 more)
fmt/: Cargo.toml  README.md
fmt/src/: buffer.rs  chunk.rs  comments.rs  config.rs  formatter.rs  helpers.rs  inline_config.rs  lib.rs  macros.rs  string.rs  visit.rs
fmt/src/solang_ext/: ast_eq.rs  loc.rs  safe_unwrap.rs
fmt/tests/: formatter.rs
forge-fmt/: Cargo.toml
forge-fmt/src/: buffer.rs  chunk.rs  comments.rs  config.rs  formatter.rs  helpers.rs  inline_config.rs  lib.rs  string.rs  visit.rs
forge-fmt/src/solang_ext/: ast_eq.rs  loc.rs  mod.rs
forge-fmt/tests/: formatter.rs
foundry-config/: Cargo.toml
foundry-config/src/: cache.rs  chain.rs  endpoints.rs  etherscan.rs  fix.rs  fs_permissions.rs  fuzz.rs  invariant.rs  lib.rs  macros.rs  utils.rs
foundry-config/src/inline/: conf_parser.rs  mod.rs  natspec.rs
foundry-config/src/providers/: mod.rs  remappings.rs
integration/anchor/programs/anchor/: Cargo.toml
integration/anchor/programs/anchor/src/: lib.rs
integration/polkadot/ink/caller/: Cargo.toml  lib.rs
integration/soroban/rust/: Cargo.toml
integration/soroban/rust/contracts/hello-world/: Cargo.toml
integration/soroban/rust/contracts/hello-world/src/: lib.rs
integration/substrate/ink/caller/: Cargo.toml  lib.rs
integration/subxt-tests/: .gitignore  Cargo.toml  README.md  metadata.scale
integration/subxt-tests/src/: lib.rs
integration/subxt-tests/src/cases/: array_struct_mapping_storage.rs  arrays.rs  asserts.rs  balances.rs  builtins.rs  builtins2.rs  create_contract.rs  destruct.rs  events.rs  external_call.rs  flipper.rs  issue666.rs  mod.rs  msg_sender.rs  primitives.rs  randomizer.rs  store.rs  structs.rs  uniswapv2_erc20.rs  uniswapv2_factory.rs  uniswapv2_pair.rs
intrinsics/: intrinsics.bc  intrinsics.c
playground/: Simple.sol  test.sol
scripts/: build-llvm-linux.dockerfile  build-llvm-windows.dockerfile  ci.dockerfile  get_tx.sh
solana-library/: minimum_balance.sol  spl_token.sol  system_instruction.sol
solang-parser/: Cargo.toml  README.md  build.rs
solang-parser/src/: comments.rs  diagnostics.rs  doc.rs  doccomment.rs  lexer.rs  lib.rs  pt.rs  solidity.lalrpop  solidity.rs  test.rs  tests.rs
solang-parser/src/helpers/: fmt.rs  loc.rs  mod.rs  ord.rs
src/: ast.rs  cfg.rs  emit.rs  file_cache.rs  file_resolver.rs  lib.rs  link.rs  main.rs  output.rs  parse.rs  parsedcache.rs  parser.rs  resolve.rs  resolver.rs  solidity.lalrpop  solidity.rs  standard_json.rs  test.rs  vartable.rs
stdlib/: .clang-format  .gitignore  Makefile  bigint.c  format.c  heap.c  keccak256.c  keccak256.h  ripemd160.bc  ripemd160.c  sha3.bc  solana.bc  solana.c  solana_sdk.h  soroban.c  stdlib.bc  stdlib.c  stdlib.h  substrate.bc  substrate.c  test  wasmheap.c
test/: broken.sol  casts.sol  compiles.sol  if.sol  parse1.sol  parse2.sol  undeclared.sol
tests/: .gitignore  available_expressions.rs  borsh_encoding.rs  builtins.rs  burrow.rs  cli.rs  codegen.rs  contract.rs  doc_examples.rs  evm.rs  ewasm.rs  imports.rs  lachain.rs  lir.rs  loops.rs  polkadot.rs  solana.rs  solang_import_resolution_tests.rs  soroban.rs  ssa_ir.rs  stylus.rs  substrate.rs  undefined_variable_detection.rs  unused_variable_detection.rs  variables.rs
vscode/: .eslintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json  solidity.configuration.json  tsconfig.json
(+2814 files in other folders)
