[package]
name = "forge-fmt"
version = "0.3.2"
authors = ["Sean Young <sean@mess.org>", "Lucas Steuernagel <lucas.tnagel@gmail.com>", "Cyrill Leutwiler <bigcyrill@hotmail.com>"]
homepage = "https://github.com/hyperledger/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
edition = "2021"
# version.workspace = true
# edition.workspace = true
# rust-version.workspace = true
# authors.workspace = true
# license.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
foundry-config ={path = "../foundry-config"}
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
solang-parser = {path = "../solang-parser"}
itertools = "0.11"
thiserror = "1"
ariadne = "0.2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
itertools = "0.11"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
