[package]
name = "forge-fmt"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/foundry-rs/foundry"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
ethers-core = "2.0.10"
solang-parser = { path = "../solang-parser" }
itertools = "0.11"
thiserror = "1"
ariadne = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
itertools = "0.11"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
