[package]
name = "foundry-config"
version = "0.3.2"
authors = ["Sean Young <sean@mess.org>", "Lucas Steuernagel <lucas.tnagel@gmail.com>", "Cyrill Leutwiler <bigcyrill@hotmail.com>"]
homepage = "https://github.com/hyperledger/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
edition = "2021"

# version.workspace = true
# edition.workspace = true
# rust-version.workspace = true
# authors.workspace = true
# license.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
# eth
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["async", "svm-solc"]}
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
revm-primitives = { git = "https://github.com/bluealloy/revm/", rev = "429da731cd8efdc0939ed912240b2667b9155834" }

# formats
Inflector = "0.11"
figment = { version = "0.10", features = ["toml", "env"] }
number_prefix = "0.4"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
serde_json = "1"
toml = { version = "0.7", features = ["preserve_order"] }
toml_edit = "0.19"

# dirs
dirs-next = "2"
globset = "0.4"
walkdir = "2"

# encoding
open-fastrlp = "0.1"

# misc
eyre = "0.6"
regex = "1"
semver = { version = "1", features = ["serde"] }
tracing = "0.1"
once_cell = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
path-slash = "0.2.1"

[dev-dependencies]
pretty_assertions = "1"
figment = { version = "0.10", features = ["test"] }
tempfile = "3"
