[package]
name = "solang-parser"
version = "0.2.0"
authors = ["Sean Young <sean@mess.org>"]
homepage = "https://github.com/hyperledger/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
build = "build.rs"
description = "Solang Solidity Parser"
keywords = [ "solidity", "parser" ]
edition = "2021"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
phf = { version = "0.11", features = ["macros"] }
unicode-xid = "0.2.0"
itertools = "0.10"
serde = { version = "1.0.145", features = ["derive"], optional = true }

[dev-dependencies]
walkdir = "2.3.2"
regex = "1.5.5"
pretty_assertions = "1.2"

[features]
default = []
pt-serde = ["serde"]
