[package]
name = "solang-parser"
version = "0.2.3"
authors = ["Sean Young <sean@mess.org>", "Lucas Steuernagel <lucas.tnagel@gmail.com>", "Cyrill Leutwiler <bigcyrill@hotmail.com>"]
homepage = "https://github.com/hyperledger/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
build = "build.rs"
description = "Solang Solidity Parser"
keywords = [ "solidity", "parser" ]
edition = "2021"
exclude = [ "/testdata" ]

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
phf = { version = "0.11", features = ["macros"] }
unicode-xid = "0.2"
itertools = "0.10"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
walkdir = "2.3.3"
regex = "1"
pretty_assertions = "1.3"

[features]
default = []
pt-serde = ["serde"]
