[package]
name = "solang-parser"
version = "0.3.3"
authors = ["Sean Young <sean@mess.org>", "Lucas Steuernagel <lucas.tnagel@gmail.com>", "Cyrill Leutwiler <bigcyrill@hotmail.com>"]
repository = "https://github.com/hyperledger-solang/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
build = "build.rs"
description = "Solang Solidity Parser"
keywords = [ "solidity", "parser" ]
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false }

[dependencies]
lalrpop-util = "0.20.0"
phf = { version = "0.11", features = ["macros"] }
unicode-xid = "0.2"
itertools = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
walkdir = "2.4"
regex = "1"
pretty_assertions = "1.3"

[features]
default = []
pt-serde = ["serde"]
