[package]
edition = "2021"
name = "subxt-tests"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
sp-core = "20.0.0"
sp-runtime = "23.0.0"
sp-weights = "19.0.0"
pallet-contracts-primitives = "23.0.0"
hex = "0.4.3"
num-bigint = "0.4.3"
once_cell = "1.17.2"
parity-scale-codec = {  version = "3.5.0", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.96"
sp-keyring = "23.0.0"
subxt = "0.28.0"
tokio = {version = "1.28.2", features = ["rt-multi-thread", "macros", "time"]}
contract-metadata = "3.0.1"
contract-transcode = "3.0.1"

[workspace]
members = []

